improve(processes): store complete import source metadata on process instances
relates to OPT-5312